--- a/nerdlets/alerts-dashboard-nerdlet/styles.scss
+++ b/nerdlets/alerts-dashboard-nerdlet/styles.scss
@@ -192,3 +192,44 @@ code {
   -webkit-box-shadow: 0 0 0 1px #d4d4d5, 0 6px 0 0 #808080, 0 1px 3px 0 #d4d4d5;
   box-shadow: 0 0 0 1px #d4d4d5, 0 6px 0 0 #808080, 0 1px 3px 0 #d4d4d5;
 }
+
+.shake {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
